--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'java'
-        id 'maven-publish'
+    id 'maven-publish'
 }
 
+apply plugin: 'maven-publish'
 group 'ml.codeboy'
 version '1.0-SNAPSHOT'
 
